--- a/css/style.css
+++ b/css/style.css
@@ -334,12 +334,26 @@ Parallax
 --------------------------------------------------------*/
 
 
-#parallax1, #parallax2, #parallax3, #parallax4, #parallax5, #parallax6 {
+#parallax1, #parallax3, #parallax4, #parallax5, #parallax6 {
 	width: 100%;
 	height: 440px;
 	background-color: #1c1f26;
 	position: relative;
 	overflow: hidden;
+}
+
+#parallax2
+{
+	width: 100%;
+	height: 520px;
+	background-color: #1c1f26;
+	position: relative;
+	overflow: hidden;
+}
+#parallax2 .pattern
+{
+	height: 520px;
+	line-height:1;
 }
 
 #parallax1 .vertical-text,
@@ -349,7 +363,6 @@ Parallax
 #parallax5 .vertical-text,
 #parallax6 .vertical-text,
 #parallax1 .pattern,
-#parallax2 .pattern,
 #parallax3 .pattern,
 #parallax4 .pattern,
 #parallax5 .pattern,
@@ -476,6 +489,24 @@ Parallax
 	
 	.bg4 {
 		background: url(../images/parallax/teaser4.jpg) 50% 50% fixed repeat-y;
+		width: 100%;
+		height: 100%;
+		margin: 0 auto;
+		position: absolute;
+		background-size: 110%;
+	}
+	
+	.bg5 {
+		background: url(../images/parallax/teaser5.jpg) 50% 50% fixed repeat-y;
+		width: 100%;
+		height: 100%;
+		margin: 0 auto;
+		position: absolute;
+		background-size: 110%;
+	}
+
+	.bg6 {
+		background: url(../images/parallax/teaser6.jpg) 50% 50% fixed repeat-y;
 		width: 100%;
 		height: 100%;
 		margin: 0 auto;
@@ -659,7 +690,10 @@ Content
 	
 	/*Portfolio------------------------------------------*/
 	
-
+	#portfolio
+	{
+		background-color:#DDD;
+	}
 	
 	.project-title {
 		font-family: 'Oswald', sans-serif;
