--- a/css/media.css
+++ b/css/media.css
@@ -32,7 +32,7 @@ Responsive elements
                 .contact-social-icons li { margin: 0 5px 0 5px; }
                 .links { display: none; }
                 .dropmenu { display: block; margin-top: 5px; }
-                .logo { width: 180px; height: auto; }
+                .logo-container { width: 180px; height: auto; }
                 .slidedescription { display: none; }
                 .line { width: 80px; margin-bottom: 20px; }
                 .social-icons { position: absolute; top: 4px; right:10px; margin-top: 0; }
