--- a/css/style.css
+++ b/css/style.css
@@ -584,12 +584,28 @@ Content
 	}
 	
 	.logo {
-		top: 40px;
-		position: absolute;
-		opacity: 0;
-		filter: alpha(opacity=50);
+		position: static;
+		opacity: 1;
+		z-index: 10;
+		width: 100%;
 	}
 	
+	.logo-overlay
+	{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: #000;
+		z-index: -10;
+		opacity: .5;
+	}
+	.logo-container
+	{
+		position: relative;
+		width: 235px;
+	}
 	
 	.slider-text {
 		position: absolute;
@@ -871,16 +887,22 @@ Content
 	}
 	
 	.adress {
-		color: #868991;
-		font-size: 22px;
+		color: #FFF;
+		font-size: 17px;
 		margin-top: 10px;
+	}
+	
+	.companydata
+	{
+		color: #FFF;
+		font-size: 14px;
+		margin-top: 20px;		
 	}
     
 	.lines {
 		width: 76%;
 		border-top: white 1px solid;
 		border-bottom: white 1px solid;
-		text-transform: uppercase;
 		color: white;
 		font-family: 'Oswald', sans-serif;
 		font-size: 36px;
